--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.7",
     "@angular/platform-browser-dynamic": "^16.2.7",
     "@angular/router": "^16.2.7",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.4.1",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.2.4",
     "@angular/cli": "~16.2.4",
     "@angular/compiler-cli": "^16.2.7",
+    "@types/google.maps": "^3.54.2",
     "@types/jasmine": "~4.3.6",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
